<resources>
    <string name="app_name">MPTest</string>

    <string name="product_price">$ %1$.0f</string>
    <string name="product_discount">%1$.0f\%% OFF</string>
    <string name="make_a_search">Buscar en Mercado Libre</string>
    <string name="no_products_found">Oops!\nParece que no hay productos para tu búsqueda</string>
    <string name="sold_quantity">%1$d vendidos</string>
    <string name="attributes">Características</string>
    <string name="attribute_name">%1$s:</string>
    <string name="description">Descripción</string>
    <string name="no_internet_connection">¡Parece que no hay internet!</string>
    <string name="general_error">¡Parece que hubo un error! Vuelve a intentarlo en unos instantes</string>
    <string name="retry">Reintentar</string>
</resources>
