<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.aherbel.mptest.mvvm.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".ui.activities.MainActivity">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:textSize="12sp"
            app:defaultQueryHint="@string/make_a_search"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:clipToPadding="false"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:spanCount="2"
            tools:listitem="@layout/rv_item_product"
            tools:visibility="gone" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivErrorImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/tvError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_satellite" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_products_found"
            android:textSize="20sp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:visibility="gone"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tvRetry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivErrorImage"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="20dp"
            android:onClick="@{() -> viewModel.retry()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvError" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="ivErrorImage,tvRetry,tvError"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>