<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="product"
            type="com.aherbel.mptest.model.Product" />
        <variable
            name="description"
            type="String" />
    </data>

    <ScrollView
        android:id="@+id/scrollview"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".ui.activities.ProductDetailsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/topbarView"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:padding="11dp"
                app:layout_constraintBottom_toTopOf="@+id/ivImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/topbarView"
                app:srcCompat="@drawable/ic_arrow_left" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topbarView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSoldQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@{@string/sold_quantity(product.soldQuantity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivImage"
                tools:text="70 vendidos" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:text="@{product.title}"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSoldQuantity"
                tools:text="Recortador Multigroom Philips 11 En 1 Mg5730/15" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOriginalPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_2"
                android:textSize="20sp"
                android:text="@{@string/product_price(product.originalPrice)}"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:text="$ 2499" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp"
                android:textColor="@android:color/black"
                android:text="@{@string/product_price(product.price)}"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/tvOriginalPrice"
                app:layout_constraintTop_toBottomOf="@+id/tvOriginalPrice"
                tools:text="$ 1.599" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@{@string/product_discount(product.getDiscount())}"
                android:visibility="@{product.getDiscount() > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
                app:layout_constraintStart_toEndOf="@+id/tvPrice"
                app:layout_constraintTop_toTopOf="@+id/tvPrice"
                tools:text="36% OFF" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_3"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAttributesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attributes"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/tvPrice"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAttributes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvAttributesTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvAttributesTitle"
                app:spanCount="2"
                tools:itemCount="4"
                tools:listitem="@layout/rv_item_attribute" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_3"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvAttributes" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/tvPrice"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{description}"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvDescriptionTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle"
                tools:text="Descripción" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no_products_found"
                android:textSize="20sp"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center"
                android:textAlignment="gravity"
                android:visibility="gone"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/tvRetry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivErrorImage"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivErrorImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="32dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/tvError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topbarView"
                app:layout_constraintVertical_bias="0.4"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_satellite" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="20dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvError" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tvError,ivErrorImage,tvRetry"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tvDescription,tvDescriptionTitle,divider2" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="ivImage,rvAttributes,tvTitle,tvOriginalPrice,tvDiscount,divider1,tvSoldQuantity,tvAttributesTitle,tvPrice"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>